Add filter for get trips Add index for filter
