# src/TripBundle/Controller/TripsController.php
@@ -16,7 +16,7 @@
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 1.0.0
- * 
+ *
  * Generated by: https://github.com/openapitools/openapi-generator.git
  *
  */
@@ -29,6 +29,8 @@
 
 namespace TripBundle\Controller;
 
+use Doctrine\ORM\EntityManagerInterface;
+use Doctrine\Persistence\ObjectRepository;
 use \Exception;
 use JMS\Serializer\Exception\RuntimeException as SerializerRuntimeException;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\IsGranted;
@@ -39,7 +41,9 @@ use Symfony\Component\HttpKernel\Exception\HttpException;
 use Symfony\Component\Security\Core\Security;
 use Symfony\Component\Validator\Constraints as Assert;
 use TripBundle\Api\TripsApiInterface;
+use TripBundle\Entity\Country;
 use TripBundle\Entity\Trip as Entity;
+use TripBundle\Model\Filter;
 
 /**
  * TripsController Class Doc Comment
@@ -52,10 +56,12 @@ use TripBundle\Entity\Trip as Entity;
 class TripsController extends Controller
 {
     private Security $security;
+    private ObjectRepository $countryRepository;
 
-    public function __construct(Security $security)
+    public function __construct(Security $security, EntityManagerInterface $em)
     {
         $this->security = $security;
+        $this->countryRepository = $em->getRepository(Country::class);
     }
 
     /**
@@ -78,16 +84,16 @@ class TripsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
         }
 
         // Handle authentication
-        // Authentication 'BearerAuth' required
+        // Authentication 'BasicAuth' required
         // HTTP basic authentication required
-        $securityBearerAuth = $request->headers->get('authorization');
+        $securityBasicAuth = $request->headers->get('authorization');
 
         // Read out all input parameter values into variables
         $tripCreate = $request->getContent();
@@ -117,9 +123,9 @@ class TripsController extends Controller
         try {
             $handler = $this->getApiHandler();
 
-            // Set authentication method 'BearerAuth'
-            $handler->setBearerAuth($securityBearerAuth);
-            
+            // Set authentication method 'BasicAuth'
+            $handler->setBasicAuth($securityBasicAuth);
+
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
@@ -139,7 +145,7 @@ class TripsController extends Controller
             }
 
             return new Response(
-                $result !== null ?$this->serialize($result, $responseFormat):'',
+                $result !== null ? $this->serialize($result, $responseFormat) : '',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
@@ -170,16 +176,16 @@ class TripsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
         }
 
         // Handle authentication
-        // Authentication 'BearerAuth' required
+        // Authentication 'BasicAuth' required
         // HTTP basic authentication required
-        $securityBearerAuth = $request->headers->get('authorization');
+        $securityBasicAuth = $request->headers->get('authorization');
 
         // Read out all input parameter values into variables
 
@@ -205,9 +211,9 @@ class TripsController extends Controller
         try {
             $handler = $this->getApiHandler();
 
-            // Set authentication method 'BearerAuth'
-            $handler->setBearerAuth($securityBearerAuth);
-            
+            // Set authentication method 'BasicAuth'
+            $handler->setBasicAuth($securityBasicAuth);
+
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
@@ -227,7 +233,7 @@ class TripsController extends Controller
             }
 
             return new Response(
-                $result !== null ?$this->serialize($result, $responseFormat):'',
+                $result !== null ? $this->serialize($result, $responseFormat) : '',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
@@ -258,16 +264,16 @@ class TripsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
         }
 
         // Handle authentication
-        // Authentication 'BearerAuth' required
+        // Authentication 'BasicAuth' required
         // HTTP basic authentication required
-        $securityBearerAuth = $request->headers->get('authorization');
+        $securityBasicAuth = $request->headers->get('authorization');
 
         // Read out all input parameter values into variables
 
@@ -293,13 +299,103 @@ class TripsController extends Controller
         try {
             $handler = $this->getApiHandler();
 
-            // Set authentication method 'BearerAuth'
-            $handler->setBearerAuth($securityBearerAuth);
-            
+            // Set authentication method 'BasicAuth'
+            $handler->setBasicAuth($securityBasicAuth);
+
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
             $result = $handler->getTrip($tripId, $responseCode, $responseHeaders);
+
+            // Find default response message
+            $message = 'unexpected error';
+
+            // Find a more specific message, if available
+            switch ($responseCode) {
+                case 200:
+                    $message = 'ok';
+                    break;
+                case 0:
+                    $message = 'unexpected error';
+                    break;
+            }
+
+            return new Response(
+                $result !== null ? $this->serialize($result, $responseFormat) : '',
+                $responseCode,
+                array_merge(
+                    $responseHeaders,
+                    [
+                        'Content-Type' => $responseFormat,
+                        'X-OpenAPI-Message' => $message
+                    ]
+                )
+            );
+        } catch (Exception $fallthrough) {
+            return $this->createErrorResponse(new HttpException(500, 'An unsuspected error occurred.', $fallthrough));
+        }
+    }
+
+    /**
+     * Operation getTrips
+     *
+     * Get trips
+     *
+     * @param Request $request The Symfony request to handle.
+     * @return Response The Symfony response.
+     */
+    public function getTripsAction(Request $request)
+    {
+        // Figure out what data format to return to the client
+        $produces = ['application/json'];
+        // Figure out what the client accepts
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
+        if ($responseFormat === null) {
+            return new Response('', 406);
+        }
+
+        // Handle authentication
+        // Authentication 'BasicAuth' required
+        // HTTP basic authentication required
+        $securityBasicAuth = $request->headers->get('authorization');
+
+        // Read out all input parameter values into variables
+        $filter = $request->query->get('filter');
+
+        // Use the default value if no value was provided
+
+        // Deserialize the input values that needs it
+        try {
+            $filter = $this->deserialize(json_encode([
+                'started_at' => $request->query->get('started_at'),
+                'finished_at' => $request->query->get('finished_at'),
+                'country' => $request->query->get('country'),
+            ]), Filter::class, 'application/json');
+        } catch (SerializerRuntimeException $exception) {
+            return $this->createBadRequestResponse($exception->getMessage());
+        }
+
+        // Validate the input values
+        $asserts = [];
+        $asserts[] = new Assert\Type(Filter::class);
+        $asserts[] = new Assert\Valid();
+        $response = $this->validate($filter, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+
+
+        try {
+            $handler = $this->getApiHandler();
+
+            // Set authentication method 'BasicAuth'
+            $handler->setBasicAuth($securityBasicAuth);
+
+            // Make the call to the business logic
+            $responseCode = 200;
+            $responseHeaders = [];
+            $result = $handler->getTrips($filter, $responseCode, $responseHeaders);
 
             // Find default response message
             $message = 'unexpected error';
@@ -353,16 +449,16 @@ class TripsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
         }
 
         // Handle authentication
-        // Authentication 'BearerAuth' required
+        // Authentication 'BasicAuth' required
         // HTTP basic authentication required
-        $securityBearerAuth = $request->headers->get('authorization');
+        $securityBasicAuth = $request->headers->get('authorization');
 
         // Read out all input parameter values into variables
         $tripUpdate = $request->getContent();
@@ -407,9 +503,9 @@ class TripsController extends Controller
         try {
             $handler = $this->getApiHandler();
 
-            // Set authentication method 'BearerAuth'
-            $handler->setBearerAuth($securityBearerAuth);
-            
+            // Set authentication method 'BasicAuth'
+            $handler->setBasicAuth($securityBasicAuth);
+
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
@@ -429,7 +525,7 @@ class TripsController extends Controller
             }
 
             return new Response(
-                $result !== null ?$this->serialize($result, $responseFormat):'',
+                $result !== null ? $this->serialize($result, $responseFormat) : '',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
